<resources>
    <!-- Icons Needed:-->
    <!-- New Conversation, New Group, Contact List, Settings, About, default profile portait, send msg button, msg status-->

    <!-- Server Anfragen:-->
    <!-- boolean setUser(pubKey, signed name), User getUser(name), List<Message> getMessages(name), boolean sendMessage(signed message, name)-->
    <string name="app_name">TrustMessenger</string>
    <!-- Strings related to login -->
    <string name="welcome">Hello, </string>
    <string name="welcome_default">You have no Private Key</string>
    <string name="delete_key">Delete Key</string>
    <string name="login_button">Login</string>
    <!-- Strings related to register -->
    <string name="action_register">Create Private Key</string>
    <string name="prompt_register_name">Choose Username</string>
    <string name="prompt_register_password">Local Password</string>
    <string name="register_explaining_text">Choose a username for other people to contact you. A public/private-keypair will be generated, your name will get signed with your private key, and then be sent to the server with your public key. If your username is available, the registration will be successfull. Otherwise you will have to choose another username.</string>
    <string name="error_name_empty">Please provide a username</string>
    <!-- Strings related to Dialogs-->
    <string name="dialog_accept">Ok</string>
    <string name="dialog_approve">Yes</string>
    <string name="dialog_decline">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="find_user_dialog_title">Find Contact</string>
    <!-- Strings related to Password Selection -->
    <string name="toast_password_set_success">Password was set successfully</string>
    <string name="toast_password_set_fail">An error occurred while setting the password</string>
    <string name="dialog_title_password">Set Password</string>
    <string name="dialog_message_password">Do you want to set a password?\nIt will only be used to secure the app on your device.</string>
    <!-- Strings related to Loadingscreen -->
    <string name="loadingscreen_title">Loading</string>
    <string name="loadingscreen_body">Please Wait...</string>
    <!-- Strings related to Overview -->
    <string name="chat_segment_title_default">{User} - 10 min ago</string>
    <string name="chat_segment_body_default">Haha thats funny</string>
    <!-- Strings related to Navigation -->
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="navigation_new_chat">New Conversation</string>
    <string name="navigation_new_group">Create Group</string>
    <string name="navigation_overview">Home</string>
    <string name="navigation_new_contact">Add Contact</string>
    <string name="navigation_contacts">Contact List</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_about">About</string>
    <string name="navigation_logout">Logout</string>
    <!-- Strings related to Contacts -->
    <string name="add_contact_message">Username:</string>
    <string name="new_contact_not_new">The User you are searching for is already in your Contact List.</string>
    <string name="new_contact_success">The User was found, and his Public Key was added to your Contact List.</string>
    <string name="new_contact_error">An error happened.</string>
    <string name="new_contact_not_existing">The User you are searching for does not exist.</string>
    <string name="contact_open_conversation">Open Conversation</string>
    <string name="contact_push">Push</string>
    <string name="default_contact_name">Sam Smith</string>
    <string name="buddy_1">Terry</string>
    <string name="buddy_2">John</string>
    <string name="buddy_3">Lara</string>
    <string name="buddy_4">Stacey</string>
    <!-- Strings used as Activity Titles -->
    <string name="activity_contact_list">Contact List</string>
    <string name="activity_overview">Chats</string>
    <string name="activity_register">Create Private Key</string>
    <string name="activity_settings">Settings</string>
    <!-- Strings used in Settings -->
    <string name="settings_save_db">Save Database</string>
    <string name="settings_save_db_success">DB saved successfully</string>
    <string name="settings_save_db_error">There was an error saving the DB</string>
    <!-- Strings used in pre-Alpha -->
    <string name="functionality_not_implemented">This functionality has not been implemented yet.</string>
    <string name="prea_tbd">To be developed...</string>
    <!-- Strings used in Conversation -->
    <string name="message_segment_content_default">Hey dude!</string>
    <string name="message_segment_time_default">4:20 pm</string>
    <string name="message_segment_status_default">sent</string>
    <string name="message_title_default">Some Username</string>
    <string name="message_segment_incoming_status">inc</string>
    <string name="message_send">Send</string>
    <string name="new_conversation_title">Choose Conversationpartner</string>
    <!-- Strings used in Chat Overview -->
    <string name="chat_overview_destruct_title">Selfdestruction Timer:</string>
    <string name="chat_overview_media_title">Shared Media</string>
    <string name="chat_overview_destruct_value_default">24h</string>
    <string name="chat_overview_title_default">Some Username</string>
    <string name="chat_overview_title_prefix">Chat with</string>
    <!-- Strings used in Contact Activity -->
    <string name="contact_public_key_title">Public Key</string>
    <string name="contact_public_key_value_title">Key:</string>
    <string name="contact_public_key_modul_title">Modul:</string>
    <string name="contact_public_key_value_default">dlishflajkzugshjvabfmhmyjesgfkuszegkjysfmsydjfb</string>
    <string name="contact_public_key_modul_default">aflsihfkjfhglsiefhmjshbgfmhxbkyskdjgbsklirghliuhysldhfykjhesfblyksuh</string>
    <string name="contact_chats_title">Open Chats</string>
</resources>
