<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/navigation_overview"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:gravity="center_vertical"
            android:text="@string/navigation_overview" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/navigation_new_group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:gravity="center_vertical"
            android:text="@string/navigation_new_group" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/navigation_new_contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:gravity="center_vertical"
            android:text="@string/navigation_new_contact" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/navigation_contact_list"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:gravity="center_vertical"
            android:text="@string/navigation_contacts" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/navigation_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:gravity="center_vertical"
            android:text="@string/navigation_settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/navigation_logout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="?android:attr/activatedBackgroundIndicator"
            android:gravity="center_vertical"
            android:text="@string/navigation_logout" />
    </LinearLayout>

</RelativeLayout>