<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.piddnbuddn.we.trustmessenger.LoginActivity">


    <TextView
        android:id="@+id/login_textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_default" />

    <Button
        android:id="@+id/login_button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/action_register"
        android:layout_below="@+id/login_textview_welcome"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/login_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button_create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/delete_key"
        android:visibility="visible" />
</RelativeLayout>
